--- a/com_payzen/plg_hikashoppayment_payzen/languages/de-DE.plg_hikashoppayment_payzen.ini
+++ b/com_payzen/plg_hikashoppayment_payzen/languages/de-DE.plg_hikashoppayment_payzen.ini
@@ -1,29 +1,30 @@
-;;;;;;;;;;;;;;;;;;;;;;;;;; ADMIN PARAMETERS ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZEN_CONFIG_PAGE_TITLE="PayZen - Configuration"
+; ADMIN PARAMETERS
+PAYZEN_CONFIG_PAGE_TITLE="PayZen - Standardzahlung"
 
 PAYZEN_MODULE_INFORMATION="MODULINFORMATIONEN"
 PAYZEN_DEVELOPED_BY="Entwickelt von"
 PAYZEN_CONTACT_EMAIL="Kontakt"
 PAYZEN_CONTRIB_VERSION="Modulversion"
-PAYZEN_PLATFORM_VERSION="Plattformversion"
-PAYZEN_DOCUMENTAION="Dokumentation"
-PAYZEN_DOCUMENTAION_TEXT="HIER FINDEN SIE DIE MODUL-KONFIGURATIONSDOKUMENTATION"
+PAYZEN_GATEWAY_VERSION="Plattformversion"
+PAYZEN_DOCUMENTATION_TEXT="KLICKEN SIE, UM DIE MODUL-KONFIGURATIONSDOKUMENTATION ZU FINDEN:"
 
-PAYZEN_PLATFORM_ACCESS="ZUGANG ZAHLUNGSSCHNITTSTELLE"
+PAYZEN_GATEWAY_ACCESS="ZUGANG ZAHLUNGSSCHNITTSTELLE"
 PAYZEN_SITE_ID="Shop ID"
-PAYZEN_SITE_ID_DESC="Kennung, die von Ihrer Bank bereitgestellt wird."
-PAYZEN_KEY_TEST="Zertifikat im Testbetrieb"
-PAYZEN_KEY_TEST_DESC="Zertifikat, das von Ihrer Bank zu Testzwecken bereitgestellt wird (im PayZen-System verfügbar)."
-PAYZEN_KEY_PROD="Zertifikat im Produktivbetrieb"
-PAYZEN_KEY_PROD_DESC="Von Ihrer Bank bereitgestelltes Zertifikat (im PayZen-System verfügbar)."
+PAYZEN_SITE_ID_DESC="Kennung, die von PayZen bereitgestellt wird."
+PAYZEN_KEY_TEST="Schlüssel im Testbetrieb"
+PAYZEN_KEY_TEST_DESC="Schlüssel, das von PayZen zu Testzwecken bereitgestellt wird (im PayZen Back Office verfügbar)."
+PAYZEN_KEY_PROD="Schlüssel im Produktivbetrieb"
+PAYZEN_KEY_PROD_DESC="Von PayZen bereitgestelltes Schlüssel (im PayZen Back Office verfügbar, nachdem der Produktionsmodus aktiviert wurde)."
 PAYZEN_CTX_MODE="Modus"
 PAYZEN_CTX_MODE_DESC="Kontextmodus dieses Moduls."
 PAYZEN_CTX_MODE_TEST="TEST"
 PAYZEN_CTX_MODE_PROD="PRODUKTION"
-PAYZEN_PLATFORM_URL="Plattform-URL"
-PAYZEN_PLATFORM_URL_DESC="Link zur Bezahlungsplattform."
+PAYZEN_SIGN_ALGO="Signaturalgorithmus"
+PAYZEN_SIGN_ALGO_DESC="Algorithmus zur Berechnung der Zahlungsformsignatur. Der ausgewählte Algorithmus muss derselbe sein, wie er im PayZen Back Office.<br /><b>Der HMAC-SHA-256-Algorithmus sollte nicht aktiviert werden, wenn er noch nicht im PayZen Back Office verfügbar ist. Die Funktion wird in Kürze verfügbar sein.</b>"
+PAYZEN_GATEWAY_URL="Schnittstellen-URL"
+PAYZEN_GATEWAY_URL_DESC="Link zur Bezahlungsplattform."
 PAYZEN_IPN_URL="Benachrichtigung-URL"
-PAYZEN_IPN_URL_DESC="URL vor Übertragung in Ihr PayZen prüfen."
+PAYZEN_IPN_URL_DESC="URL, die Sie in Ihre PayZen Back Office kopieren sollen > Einstellung > Regeln der Benachrichtigungen"
 
 PAYZEN_PAYMENT_PAGE="ZAHLUNGSSEITE"
 PAYZEN_LANGUAGE="Standardsprache"
@@ -31,15 +32,15 @@ PAYZEN_LANGUAGE_DESC="Wählen Sie bitte die Spracheinstellung der Zahlungsseiten
 PAYZEN_AVAILABLE_LANGUAGES="Verfügbare Sprachen"
 PAYZEN_AVAILABLE_LANGUAGES_DESC="Verfügbare Sprachen der Zahlungsseite. Nichts auswählen, um die Einstellung der Zahlungsplattform zu benutzen."
 PAYZEN_CAPTURE_DELAY="Einzugsfrist"
-PAYZEN_CAPTURE_DELAY_DESC="Anzahl der Tage bis zum Einzug der Zahlung (Einstellung über Ihr PayZen-System)."
+PAYZEN_CAPTURE_DELAY_DESC="Anzahl der Tage bis zum Einzug der Zahlung (Einstellung über Ihr PayZen Back Office)."
 PAYZEN_VALIDATION_MODE="Bestätigungsmodus"
-PAYZEN_VALIDATION_MODE_DESC="Bei manueller Eingabe müssen Sie Zahlungen manuell in Ihrem Banksystem bestätigen."
+PAYZEN_VALIDATION_MODE_DESC="Bei manueller Eingabe müssen Sie Zahlungen manuell in Ihr PayZen Back Office bestätigen."
 PAYZEN_PAYMENT_CARDS="Art der Kreditkarten"
-PAYZEN_PAYMENT_CARDS_DESC="Liste der/die für die Zahlung verfügbare(n) Kartentyp(en), durch Semikolon getrennt."
+PAYZEN_PAYMENT_CARDS_DESC="Wählen Sie die zur Zahlung verfügbaren Kartentypen aus. Nichts auswählen, um die Einstellung der Zahlungsplattform zu benutzen."
 
-PAYZEN_SELECTIVE_3DS="SELEKTIVES 3-DS"
-PAYZEN_THREEDS_AMOUNT_MIN="Mindestbetrag zur Aktivierung von 3-DS"
-PAYZEN_THREEDS_AMOUNT_MIN_DESC="Muss für die Option Selektives 3-D Secure freigeschaltet sein."
+PAYZEN_SELECTIVE_3DS="SELEKTIVES 3DS"
+PAYZEN_THREEDS_AMOUNT_MIN="3DS deaktivieren"
+PAYZEN_THREEDS_AMOUNT_MIN_DESC="Betrag, unter dem 3DS deaktiviert wird. Muss für die Option Selektives 3DS freigeschaltet sein. Weitere Informationen finden Sie in der Moduldokumentation."
 
 PAYZEN_RETURN_TO_SHOP="ZURÜCK ZUM SHOP"
 PAYZEN_REDIRECT_ENABLED="Automatische Weiterleitung"
@@ -59,8 +60,8 @@ PAYZEN_VERIFIED_STATUS_DESC="Status der gelungenen Zahlungen."
 PAYZEN_INVALID_STATUS="Status der zahlungen (Scheitern)"
 PAYZEN_INVALID_STATUS_DESC="Status der gestrandeten Zahlungen"
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; ADMIN CONSTANTS ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZEN_MODE_DEFAULT="Einstellung Back Office"
+; ADMIN CONSTANTS
+PAYZEN_MODE_DEFAULT="PayZen Back Office Konfiguration"
 PAYZEN_MODE_AUTOMATIC="Automatisch"
 PAYZEN_MODE_MANUAL="Manuell"
 
@@ -78,26 +79,32 @@ PAYZEN_LANGUAGE_POLISH="Polnisch"
 PAYZEN_LANGUAGE_RUSSIAN="Russisch"
 PAYZEN_LANGUAGE_TURKISH="Türkisch"
 
-PAYZEN_DEFAULT_TITLE="PayZen"
-PAYZEN_DEFAULT_DESCRIPTION="Zahlung mit EC-/Kreditkarte"
+PAYZEN_REDIRECT_SUCCESS_MESSAGE_DFEAULT="Weiterleitung zum Shop in Kürze..."
+PAYZEN_REDIRECT_ERROR_MESSAGE_DFEAULT="Weiterleitung zum Shop in Kürze..."
+
+PAYZEN_DEFAULT_TITLE="Zahlung mit EC-/Kreditkarte"
+PAYZEN_DEFAULT_DESCRIPTION="Sie werden zu den Zahlungsseiten nach Zahlungsbestätigung weitergeleitet."
 
 PAYZEN_RESULT="Ergebnis: "
+PAYZEN_CARD_BRAND_BUYER_CHOICE="Kartenmarke von Käufer gewählt."
+PAYZEN_CARD_BRAND_DEFAULT_CHOICE="Standard-Kartenmarke verwendet."
 PAYZEN_TRANS_ID="Transaktionsnummer: "
 PAYZEN_CC_NUMBER="Kartennummer: "
 PAYZEN_CC_EXPIRY="Verfallsdatum: "
 PAYZEN_CC_TYPE="Zahlungsmittel: "
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; REDIRECTION PAGE TEXT MESSAGES ;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; REDIRECTION PAGE TEXT MESSAGES
 PAYZEN_PLEASE_WAIT_BEFORE_REDIRECTION="Bitte warten Sie. Sie werden in Kürze zur Bezahlungsplattform weitergeleitet."
 PAYZEN_CLICK_ON_BUTTON_IF_NOT_REDIRECTED="Sollte die Wartezeit mehr als 10 Sekunden betragen, klicken Sie bitte auf den untenstehenden Button."
 
 PAYZEN_SEND_BTN_VALUE="Bezahlen"
 PAYZEN_SEND_BTN_ALT="Klicken Sie hier zum Zahlen mit PayZen"
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; RETURN TO SHOP TEXT MESSAGES ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZEN_CHECK_URL_WARN="Die automatische Bestätigung hat nicht funktioniert. Haben Sie die Server URL im Backoffice PayZen richtig eingestellt?"
-PAYZEN_CHECK_URL_WARN_DETAILS="Um die Problematif zu verstehen, benutzen Sie bitte die Benutzerhilfe des Moduls:<br />&nbsp;&nbsp;&nbsp;- Kapitel « Aufmerksam lesen »<br />&nbsp;&nbsp;&nbsp;- Kapitel « Einstellung der Server URL »."
-PAYZEN_SHOP_TO_PROD_INFO="<b>UMSTELLUNG AUF PRODUKTIONSUMFELD:</b> Sie möchten wissen, wie Sie auf Produktionsumfeld umstellen können, bitte lesen Sie folgende URL :"
-PAYZEN_ERROR_MSG="Une erreur est survenue durant le processus de paiement."
+; RETURN TO SHOP TEXT MESSAGES
+PAYZEN_CHECK_URL_WARN="Es konnte keine automatische Benachrichtigung erstellt werden. Bitte prüfen Sie, ob die Benachrichtigung-URL in Ihrem PayZen Back Office korrekt eingerichtet?"
+PAYZEN_CHECK_URL_WARN_DETAILS="Nähere Informationen zu diesem Problem entnehmen Sie bitte der Moduldokumentation: <br />&nbsp;&nbsp;&nbsp;- Kapitel &laquo; Bitte vor dem Weiterlesen aufmerksam lesen &raquo;<br />&nbsp;&nbsp;&nbsp;- Kapitel &laquo; Benachrichtigung-URL Einstellungen &raquo;"
+PAYZEN_SHOP_TO_PROD_INFO="<u><p>UMSTELLUNG AUF PRODUKTIONSUMFELD:</u></p> Sie möchten wissen, wie Sie auf Produktionsumfeld umstellen können, bitte lesen Sie die Kapitel &laquo; Weiter zur Testphase &raquo; und &laquo; Verschieben des Shops in den Produktionsumfeld &raquo; in der Dokumentation des Moduls."
+PAYZEN_ERROR_MSG="Ein Fehler ist während dem Zahlungsvorgang unterlaufen."
+PAYZEN_FAILURE_MSG="Ihre Zahlung wurde abgelehnt. Bitte führen Sie den Bestellvorgang erneut durch."
 
-PAYZEN_ERROR_SAVE="Ungültiger Wert für Feld «%s»."
+PAYZEN_ERROR_SAVE="Ungültiger Wert für Feld « %s »."
