--- a/com_payzen/plg_hikashoppayment_payzen/languages/en-GB.plg_hikashoppayment_payzen.ini
+++ b/com_payzen/plg_hikashoppayment_payzen/languages/en-GB.plg_hikashoppayment_payzen.ini
@@ -1,29 +1,30 @@
-;;;;;;;;;;;;;;;;;;;;;;;;;; ADMIN PARAMETERS ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZEN_CONFIG_PAGE_TITLE="PayZen - Configuration"
+; ADMIN PARAMETERS
+PAYZEN_CONFIG_PAGE_TITLE="PayZen - Standard payment"
 
 PAYZEN_MODULE_INFORMATION="MODULE INFORMATION"
 PAYZEN_DEVELOPED_BY="Developed by"
 PAYZEN_CONTACT_EMAIL="Contact us"
 PAYZEN_CONTRIB_VERSION="Module version"
-PAYZEN_PLATFORM_VERSION="Platform version"
-PAYZEN_DOCUMENTAION="Documentation"
-PAYZEN_DOCUMENTAION_TEXT="CLICK HERE TO VIEW THE MODULE CONFIGURATION DOCUMENTATION"
+PAYZEN_GATEWAY_VERSION="Gateway version"
+PAYZEN_DOCUMENTATION_TEXT="CLICK TO VIEW THE MODULE CONFIGURATION DOCUMENTATION:"
 
-PAYZEN_PLATFORM_ACCESS="PAYMENT PLATFORM ACCESS"
+PAYZEN_GATEWAY_ACCESS="PAYMENT GATEWAY ACCESS"
 PAYZEN_SITE_ID="Shop ID"
 PAYZEN_SITE_ID_DESC="The identifier provided by PayZen."
-PAYZEN_KEY_TEST="Certificate in test mode"
-PAYZEN_KEY_TEST_DESC="Certificate provided by PayZen for test mode (available in PayZen Back Office)."
-PAYZEN_KEY_PROD="Certificat en mode production"
-PAYZEN_KEY_PROD_DESC="Certificate provided by PayZen (available in your store Back Office after enabling production mode)."
+PAYZEN_KEY_TEST="Key in test mode"
+PAYZEN_KEY_TEST_DESC="Key provided by PayZen for test mode (available in PayZen Back Office)."
+PAYZEN_KEY_PROD="Key en mode production"
+PAYZEN_KEY_PROD_DESC="Key provided by PayZen (available in PayZen Back Office after enabling production mode)."
 PAYZEN_CTX_MODE="Mode"
 PAYZEN_CTX_MODE_DESC="The context mode of this module."
 PAYZEN_CTX_MODE_TEST="TEST"
 PAYZEN_CTX_MODE_PROD="PRODUCTION"
-PAYZEN_PLATFORM_URL="Payment page URL"
-PAYZEN_PLATFORM_URL_DESC="Link to the payment page."
-PAYZEN_IPN_URL="Notification URL"
-PAYZEN_IPN_URL_DESC="URL to copy in PayZen Back Office."
+PAYZEN_SIGN_ALGO="Signature algorithm"
+PAYZEN_SIGN_ALGO_DESC="Algorithm used to compute the payment form signature. Selected algorithm must be the same as one configured in the PayZen Back Office.<br /><b>The HMAC-SHA-256 algorithm should not be activated if it is not yet available in the PayZen Back Office, the feature will be available soon.</b>"
+PAYZEN_GATEWAY_URL="Payment page URL"
+PAYZEN_GATEWAY_URL_DESC="Link to the payment page."
+PAYZEN_IPN_URL="Instant Payment Notification URL"
+PAYZEN_IPN_URL_DESC="URL to copy into your PayZen Back Office > Settings > Notification rules."
 
 PAYZEN_PAYMENT_PAGE="PAYMENT PAGE"
 PAYZEN_LANGUAGE="Default Language"
@@ -35,11 +36,11 @@ PAYZEN_CAPTURE_DELAY_DESC="The number of days before the bank capture (adjustabl
 PAYZEN_VALIDATION_MODE="Validation mode"
 PAYZEN_VALIDATION_MODE_DESC="If manual is selected, you will have to confirm payments manually in your PayZen Back Office."
 PAYZEN_PAYMENT_CARDS="Card Types"
-PAYZEN_PAYMENT_CARDS_DESC="The card type(s) that can be used for the payment. Select none to use platform configuration."
+PAYZEN_PAYMENT_CARDS_DESC="The card type(s) that can be used for the payment. Select none to use gateway configuration."
 
-PAYZEN_SELECTIVE_3DS="SELECTIVE 3-DS"
-PAYZEN_THREEDS_AMOUNT_MIN="Minimum amount to activate 3-DS"
-PAYZEN_THREEDS_AMOUNT_MIN_DESC="Needs subscription to Selective 3-D Secure option."
+PAYZEN_SELECTIVE_3DS="SELECTIVE 3DS"
+PAYZEN_THREEDS_AMOUNT_MIN="Disable 3DS"
+PAYZEN_THREEDS_AMOUNT_MIN_DESC="Amount below which 3DS will be disabled. Needs subscription to selective 3DS option. For more information, refer to the module documentation."
 
 PAYZEN_RETURN_TO_SHOP="RETURN TO SHOP"
 PAYZEN_REDIRECT_ENABLED="Automatic redirection"
@@ -59,8 +60,8 @@ PAYZEN_VERIFIED_STATUS_DESC="Order status after a successful payment."
 PAYZEN_INVALID_STATUS="Failure order status"
 PAYZEN_INVALID_STATUS_DESC="Order status after a declined payment."
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; ADMIN CONSTANTS ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZEN_MODE_DEFAULT="Back Office configuration"
+; ADMIN CONSTANTS
+PAYZEN_MODE_DEFAULT="PayZen Back Office configuration"
 PAYZEN_MODE_AUTOMATIC="Automatic"
 PAYZEN_MODE_MANUAL="Manual"
 
@@ -78,26 +79,32 @@ PAYZEN_LANGUAGE_POLISH="Polish"
 PAYZEN_LANGUAGE_RUSSIAN="Russian"
 PAYZEN_LANGUAGE_TURKISH="Turkish"
 
-PAYZEN_DEFAULT_TITLE="PayZen"
-PAYZEN_DEFAULT_DESCRIPTION="Payment by credit card"
+PAYZEN_REDIRECT_SUCCESS_MESSAGE_DFEAULT="Redirection to shop in a few seconds..."
+PAYZEN_REDIRECT_ERROR_MESSAGE_DFEAULT="Redirection to shop in a few seconds..."
 
-PAYZEN_RESULT="Ergebnis: "
+PAYZEN_DEFAULT_TITLE="Payment by credit card"
+PAYZEN_DEFAULT_DESCRIPTION="You will be redirected to payment page after order confirmation."
+
+PAYZEN_RESULT="Result: "
+PAYZEN_CARD_BRAND_BUYER_CHOICE="Card brand chosen by buyer."
+PAYZEN_CARD_BRAND_DEFAULT_CHOICE="Default card brand used."
 PAYZEN_TRANS_ID="Transaction ID: "
 PAYZEN_CC_NUMBER="Card number: "
 PAYZEN_CC_EXPIRY="Expiration date: "
 PAYZEN_CC_TYPE="Payment mean: "
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; REDIRECTION PAGE TEXT MESSAGES ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZEN_PLEASE_WAIT_BEFORE_REDIRECTION="Please wait, you will be redirected to the payment platform."
+; REDIRECTION PAGE TEXT MESSAGES
+PAYZEN_PLEASE_WAIT_BEFORE_REDIRECTION="Please wait, you will be redirected to the payment gateway."
 PAYZEN_CLICK_ON_BUTTON_IF_NOT_REDIRECTED="If nothing happens in 10 seconds, click the button below."
 
 PAYZEN_SEND_BTN_VALUE="Pay"
 PAYZEN_SEND_BTN_ALT="Click to pay with PayZen"
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; RETURN TO SHOP TEXT MESSAGES ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZEN_CHECK_URL_WARN="The automatic notification has not worked. Have you correctly set up the notification URL in your PayZen Back Office?"
-PAYZEN_CHECK_URL_WARN_DETAILS="For understanding the problem, please read the documentation of the module : <br />&nbsp;&nbsp;&nbsp;- Chapter &laquo;To read carefully before going further&raquo;<br />&nbsp;&nbsp;&nbsp;- Chapter &laquo;Notification URL settings&raquo;"
-PAYZEN_SHOP_TO_PROD_INFO="<p><u>GOING INTO PRODUCTION</u></p>You want to know how to put your shop into production mode, please go to this URL : "
-PAYZEN_ERROR_MSG="Your order has not been confirmed. An error has occured in the payment process."
+; RETURN TO SHOP TEXT MESSAGES
+PAYZEN_CHECK_URL_WARN="The automatic notification has not worked. Have you correctly set up the notification URL in the PayZen Back Office?"
+PAYZEN_CHECK_URL_WARN_DETAILS="For understanding the problem, please read the documentation of the module: <br />&nbsp;&nbsp;&nbsp;- Chapter &laquo; To read carefully before going further &raquo;<br />&nbsp;&nbsp;&nbsp;- Chapter &laquo; Notification URL settings &raquo;"
+PAYZEN_SHOP_TO_PROD_INFO="<u><p>GOING INTO PRODUCTION:</u></p> You want to know how to put your shop into production mode, please read chapters &laquo; Proceeding to test phase &raquo; and &laquo; Shifting the shop to production mode &raquo; in the documentation of the module."
+PAYZEN_ERROR_MSG="An error has occurred in the payment process."
+PAYZEN_FAILURE_MSG="Your payment was not accepted. Please, try to re-order."
 
-_VADS_ERROR_SAVE="Invalid value for field «%s»."
+PAYZEN_ERROR_SAVE="Invalid value for field « %s »."
