--- a/com_payzen/plg_hikashoppayment_payzenmulti/languages/de-DE.plg_hikashoppayment_payzenmulti.ini
+++ b/com_payzen/plg_hikashoppayment_payzenmulti/languages/de-DE.plg_hikashoppayment_payzenmulti.ini
@@ -1,29 +1,31 @@
-;;;;;;;;;;;;;;;;;;;;;;;;;; ADMIN PARAMETERS ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZENMULTI_CONFIG_PAGE_TITLE="PayZen Ratenzahlung - Konfiguration"
+; ADMIN PARAMETERS
+PAYZENMULTI_CONFIG_PAGE_TITLE="PayZen - Ratenzahlung"
 
 PAYZENMULTI_MODULE_INFORMATION="MODULINFORMATIONEN"
+PAYZENMULTI_RESTRICT_WARNING="ATTENTION: The payment in installments feature activation is subject to the prior agreement of Société Générale.<br />If you enable this feature while you have not the associated option, an error 10000 – INSTALLMENTS_NOT_ALLOWED or 07 - PAYMENT_CONFIG will occur and the buyer will not be able to pay."
 PAYZENMULTI_DEVELOPED_BY="Entwickelt von"
 PAYZENMULTI_CONTACT_EMAIL="Kontakt"
 PAYZENMULTI_CONTRIB_VERSION="Modulversion"
-PAYZENMULTI_PLATFORM_VERSION="Plattformversion"
-PAYZENMULTI_DOCUMENTAION="Dokumentation"
-PAYZENMULTI_DOCUMENTAION_TEXT="HIER FINDEN SIE DIE MODUL-KONFIGURATIONSDOKUMENTATION"
+PAYZENMULTI_GATEWAY_VERSION="Plattformversion"
+PAYZENMULTI_DOCUMENTATION_TEXT="KLICKEN SIE, UM DIE MODUL-KONFIGURATIONSDOKUMENTATION ZU FINDEN:"
 
-PAYZENMULTI_PLATFORM_ACCESS="ZUGANG ZAHLUNGSSCHNITTSTELLE"
+PAYZENMULTI_GATEWAY_ACCESS="ZUGANG ZAHLUNGSSCHNITTSTELLE"
 PAYZENMULTI_SITE_ID="Shop ID"
-PAYZENMULTI_SITE_ID_DESC="Kennung, die von Ihrer Bank bereitgestellt wird."
-PAYZENMULTI_KEY_TEST="Zertifikat im Testbetrieb"
-PAYZENMULTI_KEY_TEST_DESC="Zertifikat, das von Ihrer Bank zu Testzwecken bereitgestellt wird (im PayZen-System verfügbar)."
-PAYZENMULTI_KEY_PROD="Zertifikat im Produktivbetrieb"
-PAYZENMULTI_KEY_PROD_DESC="Von Ihrer Bank bereitgestelltes Zertifikat (im PayZen-System verfügbar)."
+PAYZENMULTI_SITE_ID_DESC="Kennung, die von PayZen bereitgestellt wird."
+PAYZENMULTI_KEY_TEST="Schlüssel im Testbetrieb"
+PAYZENMULTI_KEY_TEST_DESC="Schlüssel, das von PayZen zu Testzwecken bereitgestellt wird (im PayZen Back Office verfügbar)."
+PAYZENMULTI_KEY_PROD="Schlüssel im Produktivbetrieb"
+PAYZENMULTI_KEY_PROD_DESC="Von PayZen bereitgestelltes Schlüssel (im PayZen Back Office verfügbar, nachdem der Produktionsmodus aktiviert wurde)."
 PAYZENMULTI_CTX_MODE="Modus"
 PAYZENMULTI_CTX_MODE_DESC="Kontextmodus dieses Moduls."
 PAYZENMULTI_CTX_MODE_TEST="TEST"
 PAYZENMULTI_CTX_MODE_PROD="PRODUKTION"
-PAYZENMULTI_PLATFORM_URL="Plattform-URL"
-PAYZENMULTI_PLATFORM_URL_DESC="Link zur Bezahlungsplattform."
+PAYZENMULTI_SIGN_ALGO="Signaturalgorithmus"
+PAYZENMULTI_SIGN_ALGO_DESC="Algorithmus zur Berechnung der Zahlungsformsignatur. Der ausgewählte Algorithmus muss derselbe sein, wie er im PayZen Back Office.<br /><b>Der HMAC-SHA-256-Algorithmus sollte nicht aktiviert werden, wenn er noch nicht im PayZen Back Office verfügbar ist. Die Funktion wird in Kürze verfügbar sein.</b>"
+PAYZENMULTI_GATEWAY_URL="Schnittstellen-URL"
+PAYZENMULTI_GATEWAY_URL_DESC="Link zur Bezahlungsplattform."
 PAYZENMULTI_IPN_URL="Benachrichtigung-URL"
-PAYZENMULTI_IPN_URL_DESC="URL vor Übertragung in Ihr PayZen prüfen."
+PAYZENMULTI_IPN_URL_DESC="RL, die Sie in Ihre PayZen Back Office kopieren sollen > Einstellung > Regeln der Benachrichtigungen"
 
 PAYZENMULTI_PAYMENT_PAGE="ZAHLUNGSSEITE"
 PAYZENMULTI_LANGUAGE="Standardsprache"
@@ -31,17 +33,17 @@ PAYZENMULTI_LANGUAGE_DESC="Wählen Sie bitte die Spracheinstellung der Zahlungss
 PAYZENMULTI_AVAILABLE_LANGUAGES="Verfügbare Sprachen"
 PAYZENMULTI_AVAILABLE_LANGUAGES_DESC="Verfügbare Sprachen der Zahlungsseite. Nichts auswählen, um die Einstellung der Zahlungsplattform zu benutzen."
 PAYZENMULTI_CAPTURE_DELAY="Einzugsfrist"
-PAYZENMULTI_CAPTURE_DELAY_DESC="Anzahl der Tage bis zum Einzug der Zahlung (Einstellung über Ihr PayZen-System)."
+PAYZENMULTI_CAPTURE_DELAY_DESC="Anzahl der Tage bis zum Einzug der Zahlung (Einstellung über Ihr PayZen Back Office)."
 PAYZENMULTI_VALIDATION_MODE="Bestätigungsmodus"
-PAYZENMULTI_VALIDATION_MODE_DESC="Bei manueller Eingabe müssen Sie Zahlungen manuell in Ihrem Banksystem bestätigen."
+PAYZENMULTI_VALIDATION_MODE_DESC="Bei manueller Eingabe müssen Sie Zahlungen manuell in Ihr PayZen Back Office bestätigen."
 PAYZENMULTI_PAYMENT_CARDS="Art der Kreditkarten"
-PAYZENMULTI_PAYMENT_CARDS_DESC="Liste der/die für die Zahlung verfügbare(n) Kartentyp(en), durch Semikolon getrennt."
+PAYZENMULTI_PAYMENT_CARDS_DESC="Wählen Sie die zur Zahlung verfügbaren Kartentypen aus. Nichts auswählen, um die Einstellung der Zahlungsplattform zu benutzen."
 
-PAYZENMULTI_SELECTIVE_3DS="SELEKTIVES 3-DS"
-PAYZENMULTI_THREEDS_AMOUNT_MIN="Mindestbetrag zur Aktivierung von 3-DS"
-PAYZENMULTI_THREEDS_AMOUNT_MIN_DESC="Muss für die Option Selektives 3-D Secure freigeschaltet sein."
+PAYZENMULTI_SELECTIVE_3DS="SELEKTIVES 3DS"
+PAYZENMULTI_THREEDS_AMOUNT_MIN="3DS deaktivieren"
+PAYZENMULTI_THREEDS_AMOUNT_MIN_DESC="Betrag, unter dem 3DS deaktiviert wird. Muss für die Option Selektives 3DS freigeschaltet sein. Weitere Informationen finden Sie in der Moduldokumentation."
 
-PAYZENMULTI_MULTI_OPTIONS="RATENZAHLUNG OPTIONS"
+PAYZENMULTI_MULTI_OPTIONS="RATENZAHLUNG OPTIONEN"
 PAYZENMULTI_LABEL="Kennzeichnung"
 PAYZENMULTI_MIN_AMOUNT="Mindestbetrag"
 PAYZENMULTI_MAX_AMOUNT="Höchstbetrag"
@@ -72,8 +74,8 @@ PAYZENMULTI_VERIFIED_STATUS_DESC="Status der gelungenen Zahlungen."
 PAYZENMULTI_INVALID_STATUS="Status der zahlungen (Scheitern)"
 PAYZENMULTI_INVALID_STATUS_DESC="Status der gestrandeten Zahlungen"
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; ADMIN CONSTANTS ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZENMULTI_MODE_DEFAULT="Einstellung Back Office"
+; ADMIN CONSTANTS
+PAYZENMULTI_MODE_DEFAULT="PayZen Back Office Konfiguration"
 PAYZENMULTI_MODE_AUTOMATIC="Automatisch"
 PAYZENMULTI_MODE_MANUAL="Manuell"
 
@@ -91,29 +93,35 @@ PAYZENMULTI_LANGUAGE_POLISH="Polnisch"
 PAYZENMULTI_LANGUAGE_RUSSIAN="Russisch"
 PAYZENMULTI_LANGUAGE_TURKISH="Türkisch"
 
-PAYZENMULTI_DEFAULT_TITLE="PayZen Ratenzahlung"
-PAYZENMULTI_DEFAULT_DESCRIPTION="Ratenzahlung mit EC-/Kreditkarte"
+PAYZENMULTI_REDIRECT_SUCCESS_MESSAGE_DFEAULT="Weiterleitung zum Shop in Kürze..."
+PAYZENMULTI_REDIRECT_ERROR_MESSAGE_DFEAULT="Weiterleitung zum Shop in Kürze..."
+
+PAYZENMULTI_DEFAULT_TITLE="Ratenzahlung mit EC-/Kreditkarte"
+PAYZENMULTI_DEFAULT_DESCRIPTION="Sie werden zu den Zahlungsseiten nach Zahlungsbestätigung weitergeleitet."
 
 PAYZENMULTI_RESULT="Ergebnis: "
+PAYZENMULTI_CARD_BRAND_BUYER_CHOICE="Kartenmarke von Käufer gewählt."
+PAYZENMULTI_CARD_BRAND_DEFAULT_CHOICE="Standard-Kartenmarke verwendet."
 PAYZENMULTI_TRANS_ID="Transaktionsnummer: "
 PAYZENMULTI_CC_NUMBER="Kartennummer: "
 PAYZENMULTI_CC_EXPIRY="Verfallsdatum: "
 PAYZENMULTI_CC_TYPE="Zahlungsmittel: "
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; REDIRECTION PAGE TEXT MESSAGES ;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; REDIRECTION PAGE TEXT MESSAGES
 PAYZENMULTI_PLEASE_WAIT_BEFORE_REDIRECTION="Bitte warten Sie. Sie werden in Kürze zur Bezahlungsplattform weitergeleitet."
 PAYZENMULTI_CLICK_ON_BUTTON_IF_NOT_REDIRECTED="Sollte die Wartezeit mehr als 10 Sekunden betragen, klicken Sie bitte auf den untenstehenden Button."
 
 PAYZENMULTI_SEND_BTN_VALUE="Bezahlen"
 PAYZENMULTI_SEND_BTN_ALT="Klicken Sie hier zum Zahlen mit PayZen"
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; RETURN TO SHOP TEXT MESSAGES ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZENMULTI_CHECK_URL_WARN="Die automatische Bestätigung hat nicht funktioniert. Haben Sie die Server URL im Backoffice PayZen richtig eingestellt?"
-PAYZENMULTI_CHECK_URL_WARN_DETAILS="Um die Problematif zu verstehen, benutzen Sie bitte die Benutzerhilfe des Moduls:<br />&nbsp;&nbsp;&nbsp;- Kapitel « Aufmerksam lesen »<br />&nbsp;&nbsp;&nbsp;- Kapitel « Einstellung der Server URL »."
-PAYZENMULTI_SHOP_TO_PROD_INFO="<b>UMSTELLUNG AUF PRODUKTIONSUMFELD:</b> Sie möchten wissen, wie Sie auf Produktionsumfeld umstellen können, bitte lesen Sie folgende URL :"
-PAYZENMULTI_ERROR_MSG="Ihre Bestellung konnte nicht bestätigt werden. Ein Fehler ist bei dem Zahlungsvorgang unterlaufen."
+; RETURN TO SHOP TEXT MESSAGES
+PAYZENMULTI_CHECK_URL_WARN="Es konnte keine automatische Benachrichtigung erstellt werden. Bitte prüfen Sie, ob die Benachrichtigung-URL in Ihrem PayZen Back Office korrekt eingerichtet?"
+PAYZENMULTI_CHECK_URL_WARN_DETAILS="Nähere Informationen zu diesem Problem entnehmen Sie bitte der Moduldokumentation: <br />&nbsp;&nbsp;&nbsp;- Kapitel &laquo; Bitte vor dem Weiterlesen aufmerksam lesen &raquo;<br />&nbsp;&nbsp;&nbsp;- Kapitel &laquo; Benachrichtigung-URL Einstellungen &raquo;"
+PAYZENMULTI_SHOP_TO_PROD_INFO="<u><p>UMSTELLUNG AUF PRODUKTIONSUMFELD:</u></p> Sie möchten wissen, wie Sie auf Produktionsumfeld umstellen können, bitte lesen Sie die Kapitel &laquo; Weiter zur Testphase &raquo; und &laquo; Verschieben des Shops in den Produktionsumfeld &raquo; in der Dokumentation des Moduls."
+PAYZENMULTI_ERROR_MSG="Ein Fehler ist während dem Zahlungsvorgang unterlaufen."
+PAYZENMULTI_FAILURE_MSG="Ihre Zahlung wurde abgelehnt. Bitte führen Sie den Bestellvorgang erneut durch."
 
-PAYZENMULTI_ERROR_SAVE_MULTI_OPTION="Ungültiger Wert für Feld «%s» Ratenzahlungoption %d."
-PAYZENMULTI_ERROR_SAVE="Ungültiger Wert für Feld «%s»."
+PAYZENMULTI_ERROR_SAVE_MULTI_OPTION="Das Feld &laquo; RATENZAHLUNG OPTIONEN &raquo; ist ungültig: bitte überprüfen Sie die Spalte &laquo; %s &raquo; der Option %s."
+PAYZENMULTI_ERROR_SAVE="Ungültiger Wert für Feld « %s »."
 PAYZENMULTI_ONE_OPTION_SELECT_TITLE="Ihre Ratenzahlungsoption"
-PAYZENMULTI_SEVERAL_OPTIONS_SELECT_TITLE="Wählen Sie Ratenzahlung hier aus"
+PAYZENMULTI_SEVERAL_OPTIONS_SELECT_TITLE="Wählen Sie Ihre Zahlungsoption"
