--- a/com_payzen/plg_hikashoppayment_payzenmulti/languages/en-GB.plg_hikashoppayment_payzenmulti.ini
+++ b/com_payzen/plg_hikashoppayment_payzenmulti/languages/en-GB.plg_hikashoppayment_payzenmulti.ini
@@ -1,29 +1,31 @@
-;;;;;;;;;;;;;;;;;;;;;;;;;; ADMIN PARAMETERS ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZENMULTI_CONFIG_PAGE_TITLE="PayZen Payment in installments - Configuration"
+; ADMIN PARAMETERS
+PAYZENMULTI_CONFIG_PAGE_TITLE="PayZen - Payment in installments"
 
 PAYZENMULTI_MODULE_INFORMATION="MODULE INFORMATION"
+PAYZENMULTI_RESTRICT_WARNING="ATTENTION: The payment in installments feature activation is subject to the prior agreement of Société Générale.<br />If you enable this feature while you have not the associated option, an error 10000 – INSTALLMENTS_NOT_ALLOWED or 07 - PAYMENT_CONFIG will occur and the buyer will not be able to pay."
 PAYZENMULTI_DEVELOPED_BY="Developed by"
 PAYZENMULTI_CONTACT_EMAIL="Contact us"
 PAYZENMULTI_CONTRIB_VERSION="Module version"
-PAYZENMULTI_PLATFORM_VERSION="Platform version"
-PAYZENMULTI_DOCUMENTAION="Documentation"
-PAYZENMULTI_DOCUMENTAION_TEXT="CLICK HERE TO VIEW THE MODULE CONFIGURATION DOCUMENTATION"
+PAYZENMULTI_GATEWAY_VERSION="Gateway version"
+PAYZENMULTI_DOCUMENTATION_TEXT="CLICK TO VIEW THE MODULE CONFIGURATION DOCUMENTATION:"
 
-PAYZENMULTI_PLATFORM_ACCESS="PAYMENT PLATFORM ACCESS"
+PAYZENMULTI_GATEWAY_ACCESS="PAYMENT GATEWAY ACCESS"
 PAYZENMULTI_SITE_ID="Store identifier"
 PAYZENMULTI_SITE_ID_DESC="The identifier provided by PayZen."
-PAYZENMULTI_KEY_TEST="Certificate in test mode"
-PAYZENMULTI_KEY_TEST_DESC="Certificate provided by PayZen for test mode (available in PayZen Back Office)."
-PAYZENMULTI_KEY_PROD="Certificat en mode production"
-PAYZENMULTI_KEY_PROD_DESC="Certificate provided by PayZen (available in your store Back Office after enabling production mode)."
+PAYZENMULTI_KEY_TEST="Key in test mode"
+PAYZENMULTI_KEY_TEST_DESC="Key provided by PayZen for test mode (available in PayZen Back Office)."
+PAYZENMULTI_KEY_PROD="Key en mode production"
+PAYZENMULTI_KEY_PROD_DESC="Key provided by PayZen (available in PayZen Back Office after enabling production mode)."
 PAYZENMULTI_CTX_MODE="Mode"
 PAYZENMULTI_CTX_MODE_DESC="The context mode of this module."
 PAYZENMULTI_CTX_MODE_TEST="TEST"
 PAYZENMULTI_CTX_MODE_PROD="PRODUCTION"
-PAYZENMULTI_PLATFORM_URL="Payment page URL"
-PAYZENMULTI_PLATFORM_URL_DESC="Link to the payment page."
-PAYZENMULTI_IPN_URL="Notification URL"
-PAYZENMULTI_IPN_URL_DESC="URL to copy in PayZen Back Office."
+PAYZENMULTI_SIGN_ALGO="Signature algorithm"
+PAYZENMULTI_SIGN_ALGO_DESC="Algorithm used to compute the payment form signature. Selected algorithm must be the same as one configured in the PayZen Back Office.<br /><b>The HMAC-SHA-256 algorithm should not be activated if it is not yet available in the PayZen Back Office, the feature will be available soon.</b>"
+PAYZENMULTI_GATEWAY_URL="Payment page URL"
+PAYZENMULTI_GATEWAY_URL_DESC="Link to the payment page."
+PAYZENMULTI_IPN_URL="Instant Payment Notification URL"
+PAYZENMULTI_IPN_URL_DESC="URL to copy into your PayZen Back Office > Settings > Notification rules.."
 
 PAYZENMULTI_PAYMENT_PAGE="PAYMENT PAGE"
 PAYZENMULTI_LANGUAGE="Default Language"
@@ -35,11 +37,11 @@ PAYZENMULTI_CAPTURE_DELAY_DESC="The number of days before the bank capture (adju
 PAYZENMULTI_VALIDATION_MODE="Validation mode"
 PAYZENMULTI_VALIDATION_MODE_DESC="If manual is selected, you will have to confirm payments manually in your PayZen Back Office."
 PAYZENMULTI_PAYMENT_CARDS="Card Types"
-PAYZENMULTI_PAYMENT_CARDS_DESC="The card type(s) that can be used for the payment. Select none to use platform configuration."
+PAYZENMULTI_PAYMENT_CARDS_DESC="The card type(s) that can be used for the payment. Select none to use gateway configuration."
 
-PAYZENMULTI_SELECTIVE_3DS="SELECTIVE 3-DS"
-PAYZENMULTI_THREEDS_AMOUNT_MIN="Minimum amount to activate 3-DS"
-PAYZENMULTI_THREEDS_AMOUNT_MIN_DESC="Needs subscription to Selective 3-D Secure option."
+PAYZENMULTI_SELECTIVE_3DS="SELECTIVE 3DS"
+PAYZENMULTI_THREEDS_AMOUNT_MIN="Disable 3DS"
+PAYZENMULTI_THREEDS_AMOUNT_MIN_DESC="Amount below which 3DS will be disabled. Needs subscription to selective 3DS option. For more information, refer to the module documentation."
 
 PAYZENMULTI_MULTI_OPTIONS="PAYMENT IN INSTALLMENTS OPTIONS"
 PAYZENMULTI_LABEL="Label"
@@ -49,8 +51,8 @@ PAYZENMULTI_MAX_CONTRACT="Contract"
 PAYZENMULTI_COUNT="Count"
 PAYZENMULTI_PERIOD="Period"
 PAYZENMULTI_FIRST="1st payment"
-PAYZENMULTI_MULTI_OPTIONS_DESC1="Click on &laquo;Add&raquo; button to configure one or more payment options. <br /><b>Label : </b>The option label to display on the frontend. <br /><b>Min. amount : </b>Minimum amount to enable the payment option. <br /><b>Max. amount : </b>Maximum amount to enable the payment option. <br /><b>Contract : </b>ID of the contract to use with the option. <br /><b>Count : </b>Total number of payments. <br /><b>Period : </b>Delay (in days) between payments. <br /><b>1st payment : </b>Amount of first payment, in percentage of total amount. If empty, all payments will have the same amount."
-PAYZENMULTI_MULTI_OPTIONS_DESC2="Click on &laquo;Add&raquo; button to configure one or more payment options. <br /><b>Label : </b>The option label to display on the frontend. <br /><b>Min. amount : </b>Minimum amount to enable the payment option. <br /><b>Max. amount : </b>Maximum amount to enable the payment option. <br /><b>Count : </b>Total number of payments. <br /><b>Period : </b>Delay (in days) between payments. <br /><b>1st payment : </b>Amount of first payment, in percentage of total amount. If empty, all payments will have the same amount."
+PAYZENMULTI_MULTI_OPTIONS_DESC1="Click on &laquo;Add&raquo; button to configure one or more payment options. <br /><b>Label: </b>The option label to display on the frontend. <br /><b>Min. amount: </b>Minimum amount to enable the payment option. <br /><b>Max. amount: </b>Maximum amount to enable the payment option. <br /><b>Contract: </b>ID of the contract to use with the option. <br /><b>Count: </b>Total number of payments. <br /><b>Period: </b>Delay (in days) between payments. <br /><b>1st payment: </b>Amount of first payment, in percentage of total amount. If empty, all payments will have the same amount."
+PAYZENMULTI_MULTI_OPTIONS_DESC2="Click on &laquo;Add&raquo; button to configure one or more payment options. <br /><b>Label: </b>The option label to display on the frontend. <br /><b>Min. amount: </b>Minimum amount to enable the payment option. <br /><b>Max. amount: </b>Maximum amount to enable the payment option. <br /><b>Count: </b>Total number of payments. <br /><b>Period: </b>Delay (in days) between payments. <br /><b>1st payment: </b>Amount of first payment, in percentage of total amount. If empty, all payments will have the same amount."
 PAYZENMULTI_MULTI_OPTIONS_ADD="Add"
 PAYZENMULTI_MULTI_OPTIONS_DELETE="Delete"
 
@@ -72,8 +74,8 @@ PAYZENMULTI_VERIFIED_STATUS_DESC="Order status after a successful payment."
 PAYZENMULTI_INVALID_STATUS="Failure order status"
 PAYZENMULTI_INVALID_STATUS_DESC="Order status after a declined payment."
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; ADMIN CONSTANTS ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZENMULTI_MODE_DEFAULT="Back Office configuration"
+; ADMIN CONSTANTS
+PAYZENMULTI_MODE_DEFAULT="PayZen Back Office configuration"
 PAYZENMULTI_MODE_AUTOMATIC="Automatic"
 PAYZENMULTI_MODE_MANUAL="Manual"
 
@@ -91,29 +93,35 @@ PAYZENMULTI_LANGUAGE_POLISH="Polish"
 PAYZENMULTI_LANGUAGE_RUSSIAN="Russian"
 PAYZENMULTI_LANGUAGE_TURKISH="Turkish"
 
-PAYZENMULTI_DEFAULT_TITLE="PayZen Payment in installments"
-PAYZENMULTI_DEFAULT_DESCRIPTION="Payment by credit card in several times"
+PAYZENMULTI_REDIRECT_SUCCESS_MESSAGE_DFEAULT="Redirection to shop in a few seconds..."
+PAYZENMULTI_REDIRECT_ERROR_MESSAGE_DFEAULT="Redirection to shop in a few seconds..."
+
+PAYZENMULTI_DEFAULT_TITLE="Payment by credit card in installments"
+PAYZENMULTI_DEFAULT_DESCRIPTION="You will be redirected to payment page after order confirmation."
 
 PAYZENMULTI_RESULT="Result: "
+PAYZENMULTI_CARD_BRAND_BUYER_CHOICE="Card brand chosen by buyer."
+PAYZENMULTI_CARD_BRAND_DEFAULT_CHOICE="Default card brand used."
 PAYZENMULTI_TRANS_ID="Transaction ID: "
 PAYZENMULTI_CC_NUMBER="Card number: "
 PAYZENMULTI_CC_EXPIRY="Expiration date: "
 PAYZENMULTI_CC_TYPE="Payment mean: "
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; REDIRECTION PAGE TEXT MESSAGES ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZENMULTI_PLEASE_WAIT_BEFORE_REDIRECTION="Please wait, you will be redirected to the payment platform."
+; REDIRECTION PAGE TEXT MESSAGES
+PAYZENMULTI_PLEASE_WAIT_BEFORE_REDIRECTION="Please wait, you will be redirected to the payment gateway."
 PAYZENMULTI_CLICK_ON_BUTTON_IF_NOT_REDIRECTED="If nothing happens in 10 seconds, click the button below."
 
 PAYZENMULTI_SEND_BTN_VALUE="Pay"
 PAYZENMULTI_SEND_BTN_ALT="Click to pay with PayZen"
 
-;;;;;;;;;;;;;;;;;;;;;;;;;; RETURN TO SHOP TEXT MESSAGES ;;;;;;;;;;;;;;;;;;;;;;;;;;;
-PAYZENMULTI_CHECK_URL_WARN="The automatic validation hasn\'t worked. Have you correctly set up the notification URL in your PayZen Back Office ?"
-PAYZENMULTI_CHECK_URL_WARN_DETAILS="For understanding the problem, please read the documentation of the module : <br />&nbsp;&nbsp;&nbsp;- Chapter &laquo;To read carefully before going further&raquo;<br />&nbsp;&nbsp;&nbsp;- Chapter &laquo;Notification URL settings&raquo;"
-PAYZENMULTI_SHOP_TO_PROD_INFO="<p><u>GOING INTO PRODUCTION</u></p>You want to know how to put your shop into production mode, please go to this URL : "
-PAYZENMULTI_ERROR_MSG="Your order has not been confirmed. An error has occured in the payment process."
+; RETURN TO SHOP TEXT MESSAGES
+PAYZENMULTI_CHECK_URL_WARN="The automatic validation hasn\'t worked. Have you correctly set up the notification URL in the PayZen Back Office?"
+PAYZENMULTI_CHECK_URL_WARN_DETAILS="For understanding the problem, please read the documentation of the module: <br />&nbsp;&nbsp;&nbsp;- Chapter &laquo; To read carefully before going further &raquo;<br />&nbsp;&nbsp;&nbsp;- Chapter &laquo; Notification URL settings &raquo;"
+PAYZENMULTI_SHOP_TO_PROD_INFO="<u><p>GOING INTO PRODUCTION:</u></p> You want to know how to put your shop into production mode, please read chapters &laquo; Proceeding to test phase &raquo; and &laquo; Shifting the shop to production mode &raquo; in the documentation of the module."
+PAYZENMULTI_ERROR_MSG="An error has occurred in the payment process."
+PAYZENMULTI_FAILURE_MSG="Your payment was not accepted. Please, try to re-order."
 
-PAYZENMULTI_ERROR_SAVE_MULTI_OPTION="Invalide value for field «%s» payment in installments line %d."
-PAYZENMULTI_ERROR_SAVE="Invalide value for field «%s»."
-PAYZENMULTI_ONE_OPTION_SELECT_TITLE="Your payment in installments option"
-PAYZENMULTI_SEVERAL_OPTIONS_SELECT_TITLE="Choose a payment in installments option below"
+PAYZENMULTI_ERROR_SAVE_MULTI_OPTION="The field &laquo; PAYMENT IN INSTALLMENTS OPTIONS &raquo; is invalid: please check column &laquo; %s &raquo; of the option %s."
+PAYZENMULTI_ERROR_SAVE="Invalid value for field « %s »."
+PAYZENMULTI_ONE_OPTION_SELECT_TITLE="Your payment option"
+PAYZENMULTI_SEVERAL_OPTIONS_SELECT_TITLE="Choose your payment option"
