[BOT] Migrate hotfix 2.1.3 to GitHub.

--- a/com_payzen/plg_hikashoppayment_payzenmulti/languages/en-GB.plg_hikashoppayment_payzenmulti.ini
+++ b/com_payzen/plg_hikashoppayment_payzenmulti/languages/en-GB.plg_hikashoppayment_payzenmulti.ini
@@ -115,7 +115,7 @@ PAYZENMULTI_SEND_BTN_VALUE="Pay"
 PAYZENMULTI_SEND_BTN_ALT="Click to pay with PayZen"
 
 ; RETURN TO SHOP TEXT MESSAGES
-PAYZENMULTI_CHECK_URL_WARN="The automatic validation hasn\'t worked. Have you correctly set up the notification URL in the PayZen Back Office?"
+PAYZENMULTI_CHECK_URL_WARN="The automatic validation hasn't worked. Have you correctly set up the notification URL in the PayZen Back Office?"
 PAYZENMULTI_CHECK_URL_WARN_DETAILS="For understanding the problem, please read the documentation of the module: <br />&nbsp;&nbsp;&nbsp;- Chapter &laquo; To read carefully before going further &raquo;<br />&nbsp;&nbsp;&nbsp;- Chapter &laquo; Notification URL settings &raquo;"
 PAYZENMULTI_SHOP_TO_PROD_INFO="<u><p>GOING INTO PRODUCTION:</u></p> You want to know how to put your shop into production mode, please read chapters &laquo; Proceeding to test phase &raquo; and &laquo; Shifting the shop to production mode &raquo; in the documentation of the module."
 PAYZENMULTI_ERROR_MSG="An error has occurred in the payment process."
