--- a/com_payzen/plg_hikashoppayment_payzen/languages/fr-FR.plg_hikashoppayment_payzen.ini
+++ b/com_payzen/plg_hikashoppayment_payzen/languages/fr-FR.plg_hikashoppayment_payzen.ini
@@ -105,6 +105,6 @@ PAYZEN_CHECK_URL_WARN="La validation automatique n'a pas fonctionné. Avez-vous 
 PAYZEN_CHECK_URL_WARN_DETAILS="Afin de comprendre la problématique, reportez vous à la documentation du module: <br />&nbsp;&nbsp;&nbsp;- Chapitre &laquo; A lire attentivement avant d'aller loin &raquo;<br />&nbsp;&nbsp;&nbsp;- Chapitre &laquo; Paramétrage de l'URL de notification &raquo;"
 PAYZEN_SHOP_TO_PROD_INFO="<u><p>PASSAGE EN PRODUCTION:</u></p> Vous souhaitez savoir comment passer votre boutique en production, merci de consulter les chapitres &laquo; Procéder à la phase des tests &raquo; et &laquo; Passage d'une boutique en mode production &raquo; de la documentation du module."
 PAYZEN_ERROR_MSG="Une erreur est survenue durant le processus de paiement."
-PAYZEN_FAILURE_MSG="Votre paiement n\'a pas été accepté. Veuillez repasser votre commande."
+PAYZEN_FAILURE_MSG="Votre paiement n'a pas été accepté. Veuillez repasser votre commande."
 
 PAYZEN_ERROR_SAVE="Valeur invalide pour le champ « %s »."
