[BOT] Migrate hotfix 2.1.5 to GitHub.

--- a/com_payzen/plg_hikashoppayment_payzenmulti/languages/fr-FR.plg_hikashoppayment_payzenmulti.ini
+++ b/com_payzen/plg_hikashoppayment_payzenmulti/languages/fr-FR.plg_hikashoppayment_payzenmulti.ini
@@ -119,7 +119,7 @@ PAYZENMULTI_CHECK_URL_WARN="La validation automatique n'a pas fonctionné. Avez-
 PAYZENMULTI_CHECK_URL_WARN_DETAILS="Afin de comprendre la problématique, reportez vous à la documentation du module: <br />&nbsp;&nbsp;&nbsp;- Chapitre &laquo; A lire attentivement avant d'aller loin &raquo;<br />&nbsp;&nbsp;&nbsp;- Chapitre &laquo; Paramétrage de l'URL de notification &raquo;"
 PAYZENMULTI_SHOP_TO_PROD_INFO="<u><p>PASSAGE EN PRODUCTION:</u></p> Vous souhaitez savoir comment passer votre boutique en production, merci de consulter les chapitres &laquo; Procéder à la phase des tests &raquo; et &laquo; Passage d'une boutique en mode production &raquo; de la documentation du module."
 PAYZENMULTI_ERROR_MSG="Une erreur est survenue durant le processus de paiement."
-PAYZENMULTI_FAILURE_MSG="Votre paiement n\'a pas été accepté. Veuillez repasser votre commande."
+PAYZENMULTI_FAILURE_MSG="Votre paiement n'a pas été accepté. Veuillez repasser votre commande."
 
 PAYZENMULTI_ERROR_SAVE_MULTI_OPTION="Le champ &laquo; OPTIONS DE PAIEMENT EN PLUSIEURS FOIS &raquo; est invalide: veuillez vérifier la colonne &laquo; %s &raquo; de l'option %s."
 PAYZENMULTI_ERROR_SAVE="Valeur invalide pour le champ « %s »."
